# reign

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat  start.sh
docs/plan/: plan.md  spec.md
scripts/: build_desktop.py
src/reign/: __main__.py  config.py  desktop.py
src/reign/adapters/: database.py  repository.py
src/reign/api/: app.py  schemas.py
src/reign/api/routes/: accounts.py  backup.py  budgets.py  categories.py  dashboard.py  forecast.py  goals.py  recurring.py  reports.py  settings.py  transactions.py
src/reign/domain/: models.py
src/reign/services/: categorizer.py  csv_parser.py  pdf_generator.py
src/reign/static/: app.js  index.html
src/reign/utils/: seed.py
src/sovereign_ledger/: __main__.py  config.py  exceptions.py  logging.py
src/sovereign_ledger/adapters/: database.py  repository.py
src/sovereign_ledger/api/: app.py  schemas.py
src/sovereign_ledger/api/routes/: accounts.py  backup.py  budgets.py  categories.py  dashboard.py  forecast.py  goals.py  recurring.py  reports.py  transactions.py
src/sovereign_ledger/domain/: models.py
src/sovereign_ledger/services/: categorizer.py  csv_parser.py  pdf_generator.py
src/sovereign_ledger/static/: app.js  index.html
src/sovereign_ledger/utils/: seed.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
