[project]
name = "reign"
version = "0.2.0"
description = "Local-first personal finance dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "reportlab>=4.2.0",
    "python-multipart>=0.0.17",
]

[project.scripts]
reign = "reign.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
    "playwright>=1.58.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
show-fixes = true
output-format = "grouped"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants_d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "S", "A", "C4", "T10", "SIM",
    "TCH", "ARG", "PTH", "ERA", "PL", "RUF", "PERF", "FBT",
]
ignore = ["E501", "S101", "COM812", "ISC001", "B008", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "SLF001", "ARG001", "PLR2004"]
"__init__.py" = ["F401"]
"src/reign/__main__.py" = ["S104"]
"src/reign/services/csv_parser.py" = ["ERA001", "PLR0912"]
"src/reign/adapters/repository.py" = ["PLR0913", "E712", "PLC0415"]
"src/reign/api/routes/transactions.py" = ["PLR0913"]
"src/reign/api/routes/budgets.py" = ["PLC0415"]
"src/reign/api/routes/forecast.py" = ["PLC0415"]
"src/reign/api/routes/backup.py" = ["B904"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
